some changes in design and add active id to highlight current image on thumbnail

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Image Slider</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn0.iconfinder.com/static/img/favicons/favicon-194x194.png?bf2736d2f8eaf890">
+    <meta name="og:image" content="https://placekitten.com/768/432">
   </head>
   <body>
     <h1>#fancytitle</h1>
@@ -11,7 +13,7 @@
       <div class="left button"></div>
       <div class="gallery">
         <div class="picture">
-          <img class="large image" src="" alt="">
+          <img class="large image" draggable="false">
         </div>
         <div class="description">
           <h2>Gangsta Lorem Ipsum</h2>
@@ -22,26 +24,26 @@
     </div>
     <div class="bottom container">
       <ul class="thumbnail">
-        <li class="list 1" id="active">
-          <img class="small image 1" src="" alt="">
+        <li class="list 1" >
+          <img class="small image 1" draggable="false">
         </li>
         <li class="list 2">
-          <img class="small image 2" src="" alt="">
+          <img class="small image 2" draggable="false">
         </li>
         <li class="list 3">
-          <img class="small image 3" src="" alt="">
+          <img class="small image 3" draggable="false">
         </li>
         <li class="list 4">
-          <img class="small image 4" src="" alt="">
+          <img class="small image 4" draggable="false">
         </li>
         <li class="list 5">
-          <img class="small image 5" src="" alt="">
+          <img class="small image 5" draggable="false">
         </li>
         <li class="list 6">
-          <img class="small image 6" src="" alt="">
+          <img class="small image 6" draggable="false">
         </li>
         <li class="list 7">
-          <img class="small image 7" src="" alt="">
+          <img class="small image 7" draggable="false">
         </li>
       </ul>
     </div>
