thumbnail can handle multiple images

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
     <div class="bottom container">
       <ul class="thumbnail">
         <li class="list 1" >
-          <img class="small image 1" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 2">
-          <img class="small image 2" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 3">
-          <img class="small image 3" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 4">
-          <img class="small image 4" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 5">
-          <img class="small image 5" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 6">
-          <img class="small image 6" draggable="false">
+          <img class="small image" draggable="false">
         </li>
         <li class="list 7">
-          <img class="small image 7" draggable="false">
+          <img class="small image" draggable="false">
         </li>
       </ul>
     </div>
