--- a/index.html
+++ b/index.html
@@ -52,5 +52,13 @@
       </ul>
     </div>
     <script src="imageslider.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106574997-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106574997-1');
+    </script>
   </body>
 </html>
