--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Foxes are small-to-medium-sized, omnivorous mammals belonging to several genera of the family Canidae. Foxes are slightly smaller than a medium-size domestic dog, with a flattened skull, upright triangular ears, a pointed, slightly upturned snout, and a long bushy tail (or brush).">
   </head>
   <body>
-    <h1>#what-the-fox</h1>
+    <h1>#WhatTheFox</h1>
     <div class="main container">
       <div class="left button"></div>
       <div class="gallery">
